[gd_scene load_steps=20 format=2]

[ext_resource path="res://resources/TitleBarStyle.tres" type="StyleBox" id=1]
[ext_resource path="res://TitleBar.gd" type="Script" id=2]
[ext_resource path="res://ExitButton.gd" type="Script" id=3]
[ext_resource path="res://MinimizeButton.gd" type="Script" id=4]
[ext_resource path="res://resources/MyFontData.tres" type="DynamicFontData" id=5]
[ext_resource path="res://resources/MyFont_BUTTON.tres" type="DynamicFont" id=6]
[ext_resource path="res://DataButton.gd" type="Script" id=7]
[ext_resource path="res://List1.gd" type="Script" id=8]
[ext_resource path="res://Main.gd" type="Script" id=9]
[ext_resource path="res://RichTextLabel.gd" type="Script" id=10]
[ext_resource path="res://List2.gd" type="Script" id=11]
[ext_resource path="res://List3.gd" type="Script" id=12]
[ext_resource path="res://ResizeHandle.gd" type="Script" id=13]
[ext_resource path="res://resources/DataButtonIcon.png" type="Texture" id=14]
[ext_resource path="res://resources/DataButtonIconReverse.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 2
fps = 0.0
frame_0/texture = ExtResource( 14 )
frame_1/texture = ExtResource( 15 )
frame_1/delay_sec = 0.0

[sub_resource type="DynamicFontData" id=3]
font_path = "res://resources/Epilogue-Light.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[node name="Main" type="Control"]
margin_left = -24.0
margin_right = 426.0
margin_bottom = 340.0
focus_mode = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
color = Color( 0.262745, 0.262745, 0.262745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = 197.0
margin_right = -3.05176e-05
margin_bottom = 203.0
color = Color( 0.192157, 0.184314, 0.184314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -153.0
margin_top = 57.0
margin_right = 151.0
margin_bottom = 115.0
focus_mode = 1
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]GENERATE[/center]"
text = "GENERATE"
fit_content_height = true
scroll_active = false
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="RichTextLabel"]
wait_time = 0.5
one_shot = true

[node name="RandomButton" type="Button" parent="."]
anchor_left = 0.249
anchor_right = 0.249
margin_left = -48.05
margin_top = 128.0
margin_right = 47.95
margin_bottom = 183.0
focus_neighbour_bottom = NodePath("../DataButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.847059, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.847059, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.419608, 0, 0, 1 )
text = " >:C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomButton2" type="Button" parent="."]
anchor_left = 0.498
anchor_right = 0.498
margin_left = -48.1
margin_top = 128.0
margin_right = 47.9
margin_bottom = 183.0
focus_neighbour_bottom = NodePath("../DataButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_hover = Color( 0.847059, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0470588, 0.258824, 0.619608, 1 )
text = ".///."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomButton3" type="Button" parent="."]
anchor_left = 0.747
anchor_right = 0.747
margin_left = -48.1501
margin_top = 128.0
margin_right = 47.8499
margin_bottom = 183.0
focus_neighbour_bottom = NodePath("../DataButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0862745, 0.847059, 0, 1 )
custom_colors/font_color_hover = Color( 0.0862745, 0.847059, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.427451, 0, 1 )
text = "C:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataButton" type="Button" parent="."]
anchor_left = 0.938
anchor_right = 0.938
margin_left = -30.1
margin_top = 176.0
margin_right = -2.10004
margin_bottom = 207.0
focus_neighbour_top = NodePath("../RandomButton")
focus_neighbour_bottom = NodePath(".")
custom_fonts/font = ExtResource( 6 )
icon = SubResource( 2 )
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DataButton"]

[node name="TitleBar" type="Button" parent="."]
anchor_left = 0.058
anchor_right = 0.949
margin_left = -2.1
margin_top = -1.0
margin_right = -3.04999
margin_bottom = 48.0
focus_mode = 0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_hover = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_colors/font_color_pressed = Color( 0.662745, 0.662745, 0.662745, 1 )
enabled_focus_mode = 0
text = " Socialize Helper"
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="TitleBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -17.5
margin_right = -5.0
margin_bottom = 17.5
text = "X"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="Button" parent="TitleBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -17.9405
margin_right = -41.0
margin_bottom = 17.0595
text = "_"
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List1" type="Control" parent="."]
anchor_left = 0.249
anchor_right = 0.249
anchor_bottom = 1.0
margin_left = -48.05
margin_top = 206.0
margin_right = 47.95
margin_bottom = -74.0
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="List1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -4.0
margin_bottom = -33.0
focus_neighbour_top = NodePath("../../DataButton")
max_columns = 5
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entry" type="TextEdit" parent="List1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
context_menu_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List2" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = 206.0
margin_right = 47.0
margin_bottom = -74.0
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="List2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -4.0
margin_bottom = -33.0
focus_neighbour_top = NodePath("../../DataButton")
max_columns = 5
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entry" type="TextEdit" parent="List2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
context_menu_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List3" type="Control" parent="."]
anchor_left = 0.747
anchor_right = 0.747
anchor_bottom = 1.0
margin_left = -48.15
margin_top = 206.0
margin_right = 47.85
margin_bottom = -74.0
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="List3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -4.0
margin_bottom = -33.0
focus_neighbour_top = NodePath("../../DataButton")
max_columns = 5
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entry" type="TextEdit" parent="List3"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
context_menu_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveEntries" type="Button" parent="."]
anchor_left = 0.729
anchor_top = 1.0
anchor_right = 0.729
anchor_bottom = 1.0
margin_left = -56.0501
margin_top = -60.0
margin_right = 55.9499
margin_bottom = -29.0
rect_pivot_offset = Vector2( 161.625, 17.5 )
custom_fonts/font = ExtResource( 6 )
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetEntries" type="Button" parent="."]
anchor_left = 0.27
anchor_top = 1.0
anchor_right = 0.27
anchor_bottom = 1.0
margin_left = -57.5
margin_top = -60.0
margin_right = 57.5
margin_bottom = -29.0
rect_pivot_offset = Vector2( 161.625, 17.5 )
custom_fonts/font = ExtResource( 6 )
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResizeHandle" type="Button" parent="."]
anchor_left = 0.502
anchor_top = 1.0
anchor_right = 0.502
anchor_bottom = 1.0
margin_left = -48.9
margin_top = -19.0
margin_right = 49.1
focus_mode = 0
mouse_default_cursor_shape = 9
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ResizeHandle"]
anchor_right = 1.0
margin_top = 2.0
margin_right = 1.52588e-05
margin_bottom = 5.0
mouse_filter = 2
color = Color( 0.254902, 0.254902, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ResizeHandle"]
anchor_right = 1.0
margin_top = 8.0
margin_right = 1.52588e-05
margin_bottom = 11.0
mouse_filter = 2
color = Color( 0.254902, 0.254902, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="ResizeHandle"]
anchor_right = 1.0
margin_top = 14.0
margin_right = 1.52588e-05
margin_bottom = 17.0
mouse_filter = 2
color = Color( 0.254902, 0.254902, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Main_gui_input"]
[connection signal="focus_entered" from="RichTextLabel" to="RichTextLabel" method="_on_RichTextLabel_focus_entered"]
[connection signal="timeout" from="RichTextLabel/Timer" to="RichTextLabel" method="_on_Timer_timeout"]
[connection signal="pressed" from="RandomButton" to="." method="_on_RandomButton_pressed"]
[connection signal="pressed" from="RandomButton2" to="." method="_on_RandomButton2_pressed"]
[connection signal="pressed" from="RandomButton3" to="." method="_on_RandomButton3_pressed"]
[connection signal="pressed" from="DataButton" to="List3" method="scroll_to_end"]
[connection signal="pressed" from="DataButton" to="List1" method="scroll_to_end"]
[connection signal="pressed" from="DataButton" to="List2" method="scroll_to_end"]
[connection signal="pressed" from="DataButton" to="DataButton" method="_on_DataButton_pressed"]
[connection signal="button_down" from="TitleBar" to="TitleBar" method="_on_TitleBar_button_down"]
[connection signal="button_up" from="TitleBar" to="TitleBar" method="_on_TitleBar_button_up"]
[connection signal="pressed" from="TitleBar/ExitButton" to="TitleBar/ExitButton" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="TitleBar/MinimizeButton" to="TitleBar/MinimizeButton" method="_on_MinimizeButton_pressed"]
[connection signal="scroll_setting_changed" from="List1" to="." method="_on_scroll_setting_changed"]
[connection signal="scroll_setting_changed" from="List1" to="RichTextLabel" method="_on_scroll_setting_changed"]
[connection signal="secret_activated" from="List1" to="." method="_on_secret_activated"]
[connection signal="secret_activated" from="List1" to="TitleBar" method="_on_secret_activated"]
[connection signal="focus_entered" from="List1/ItemList" to="List1" method="_on_ItemList_focus_entered"]
[connection signal="focus_exited" from="List1/ItemList" to="List1" method="_on_ItemList_focus_exited"]
[connection signal="item_activated" from="List1/ItemList" to="List1" method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="List1/ItemList" to="List1" method="_on_ItemList_item_selected"]
[connection signal="gui_input" from="List1/Entry" to="List1" method="_on_Entry_gui_input"]
[connection signal="text_changed" from="List1/Entry" to="List1" method="_on_Entry_text_changed"]
[connection signal="scroll_setting_changed" from="List2" to="." method="_on_scroll_setting_changed"]
[connection signal="scroll_setting_changed" from="List2" to="RichTextLabel" method="_on_scroll_setting_changed"]
[connection signal="secret_activated" from="List2" to="." method="_on_secret_activated"]
[connection signal="secret_activated" from="List2" to="TitleBar" method="_on_secret_activated"]
[connection signal="focus_entered" from="List2/ItemList" to="List2" method="_on_ItemList_focus_entered"]
[connection signal="focus_exited" from="List2/ItemList" to="List2" method="_on_ItemList_focus_exited"]
[connection signal="item_activated" from="List2/ItemList" to="List2" method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="List2/ItemList" to="List2" method="_on_ItemList_item_selected"]
[connection signal="gui_input" from="List2/Entry" to="List2" method="_on_Entry_gui_input"]
[connection signal="text_changed" from="List2/Entry" to="List2" method="_on_Entry_text_changed"]
[connection signal="scroll_setting_changed" from="List3" to="." method="_on_scroll_setting_changed"]
[connection signal="scroll_setting_changed" from="List3" to="RichTextLabel" method="_on_scroll_setting_changed"]
[connection signal="secret_activated" from="List3" to="." method="_on_secret_activated"]
[connection signal="secret_activated" from="List3" to="TitleBar" method="_on_secret_activated"]
[connection signal="focus_entered" from="List3/ItemList" to="List3" method="_on_ItemList_focus_entered"]
[connection signal="focus_exited" from="List3/ItemList" to="List3" method="_on_ItemList_focus_exited"]
[connection signal="item_activated" from="List3/ItemList" to="List3" method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="List3/ItemList" to="List3" method="_on_ItemList_item_selected"]
[connection signal="gui_input" from="List3/Entry" to="List3" method="_on_Entry_gui_input"]
[connection signal="text_changed" from="List3/Entry" to="List3" method="_on_Entry_text_changed"]
[connection signal="pressed" from="SaveEntries" to="." method="_on_SaveEntries_pressed"]
[connection signal="pressed" from="ResetEntries" to="." method="_on_ResetEntries_pressed"]
[connection signal="button_down" from="ResizeHandle" to="ResizeHandle" method="_on_ResizeHandle_button_down"]
[connection signal="button_up" from="ResizeHandle" to="ResizeHandle" method="_on_ResizeHandle_button_up"]
